2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/Functions.m (NSDrawNinePartImage): Bugfix in flipped drawing code

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/Functions.m:
	* Headers/AppKit/NSGraphics.h: NSDrawNinePartImage implementation

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: New GSThemeMargins struct.
	Rename buttonBorderForCell:style:state: to buttonMarginsForCell:style:state:
	and return the top/bottom/left/right margins instead of just two values.
	(This is a theme API break.)
	* Source/GSThemeDrawing.m: Implement buttonMarginsForCell:style:state:.
	Also reduce the top and left margin of the default button by 1 pt, to
	better reflect the button's appearance.
	* Source/GSGuiPrivate.h: Add a GSRoundTowardsNegativeInfinity function
	* Source/NSButtonCell.m (-drawImage:withFrame:inView:): Round the image
	position down and to the right, as this seems to look the best.
	* Source/NSButtonCell.m (-cellSize): Call new buttonMarginsForCell: method
	* Source/NSButtonCell.m (-drawingRectForBounds:): Call new
	buttonMarginsForCell: method

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (GSResolutionOfImageRep): Specify behaviour when the
	rep has a size of zero, or is a vector rep. Prevent division by 0.

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-nativeDrawInRect:...): Deal with a zero rep size
	* Source/NSCustomImageRep.m:
	- Don't retain the delegate (matching OS X)
	- Remove unnecessary flip checks from -drawAtPoint: and -drawInRect:
	  to match the code in NSImageRep
	- Fix a mistake when setting the ctm scale factor

2011-08-11 10:57  theraven

	* libs/gui/trunk/Tools/speech/GSSpeechEngine.h: Move the
	  +defaultSpeechServer method into a category interface, to silence
	  a clang warning.

2011-08-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-setBoundsSize:): Adjust the origin as well.
